# pidgeon

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md  release-plz.toml  run_pidgeon_demo.sh
.github/workflows/: ci.yml  release-plz.yml
crates/pidgeon/: CHANGELOG.md  Cargo.toml  clippy.toml
crates/pidgeon/benches/: pid_benchmark.rs
crates/pidgeon/examples/: debug_temperature_control.rs  drone_altitude_control.rs  multithreaded_control.rs  temperature_control.rs
crates/pidgeon/src/: debug.rs  lib.rs
crates/pidgeoneer/: Cargo.toml  README.md
crates/pidgeoneer/src/: app.rs  iggy_client.rs  lib.rs  main.rs  models.rs  websocket.rs
